--- a/index.html
+++ b/index.html
@@ -4,10 +4,26 @@
     <meta charset="utf-8">
     <title>404 not found</title>
     <meta name="description" content="Roughly 155 characters">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&family=Montserrat:wght@700&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 </head>
 <body>
 <!-- Content -->
+    <h2>404 Not Found</h2>
+    <div class="row">
+        <div class="column">
+            <img src="Scarecrow.png" alt="Scarecrow">
+        </div>
+    </div>
+    <div class="column">
+        <div class="info">
+            <h1>I have bad news for you</h1>
+            <p>The page that you are looking for migth be removed or is temporarily unavailable</p>
+            <button type="button">Back to homepage</button>
+        </div>
+    </div>
 </body>
 </html>
