--- a/index.html
+++ b/index.html
@@ -12,18 +12,31 @@
 </head>
 <body>
 <!-- Content -->
-    <h2>404 Not Found</h2>
-    <div class="row">
-        <div class="column">
-            <img src="Scarecrow.png" alt="Scarecrow">
-        </div>
-    </div>
-    <div class="column">
-        <div class="info">
-            <h1>I have bad news for you</h1>
-            <p>The page that you are looking for migth be removed or is temporarily unavailable</p>
-            <button type="button">Back to homepage</button>
-        </div>
+    <div class="container">
+        <header>
+            <h1>404 Not Found</h1>
+        </header>
+        <main>
+            <div class="row">
+                <div class="column">
+                    <img src="Scarecrow.png" alt="Scarecrow">
+                </div>
+            </div>
+            <article>
+                <div class="column">
+                    <div class="info">
+                        <h2>I have bad news for you</h2>
+                        <p>The page that you are looking for migth be removed or is temporarily unavailable</p>
+                        <button type="button">Back to homepage</button>
+                    </div>
+                </div>
+            </article>
+        </main>
+        <footer>
+            <div class="credit">
+                <p>Created by <a href=https://github.com/ivanrx">Ivanrx</a></p>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
