--- a/index.html
+++ b/index.html
@@ -1,42 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>404 not found</title>
-    <meta name="description" content="Roughly 155 characters">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>404 Not Found</title>
+
+    <link rel="stylesheet" href="style.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@700&family=Montserrat:wght@700&family=Space+Mono:wght@400;700&display=swap" rel="stylesheet"/>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata&family=Space+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
-<!-- Content -->
-    <div class="container">
         <header>
             <h1>404 Not Found</h1>
         </header>
         <main>
-            <div class="row">
-                <div class="column">
-                    <img src="Scarecrow.png" alt="Scarecrow">
-                </div>
-            </div>
-            <article>
-                <div class="column">
-                    <div class="info">
-                        <h2>I have bad news for you</h2>
-                        <p>The page that you are looking for migth be removed or is temporarily unavailable</p>
-                        <button type="button">Back to homepage</button>
-                    </div>
-                </div>
-            </article>
+                <img src="Scarecrow.png" alt="Scarecrow">
+            <div class="content">
+                    <h2>I have bad news for you</h2>
+                    <p>The page you are looking for might be removed or is temporarily unavailable</p>
+                    <button>BACK TO HOMEPAGE</button>
         </main>
         <footer>
-            <div class="credit">
-                <p>Created by <a href=https://github.com/ivanrx">Ivanrx</a></p>
-            </div>
+            <p>created by <a href="https://github.com/ivanrx" target="_blank">Ivanrx</a> - DevChallenges.io</p>
         </footer>
-    </div>
 </body>
 </html>
