--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
         <header>
-            <h1>404 Not Found</h1>
+            <h1>404 NOT FOUND</h1>
         </header>
         <main>
                 <img src="Scarecrow.png" alt="Scarecrow">
